src/objects/AcctSeed__Uncleared_Bank_Reconciliation_Line__c.object
<CustomObject>
    <description>Used to relate uncleared source documents with a Bank Reconciliation.</description>
    <fields>
        <fullName>AcctSeed__Amount__c</fullName>
        <description>The amount associated with this record.</description>
        <inlineHelpText>The amount associated with this record. The amount is transcribed from the associated source document.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Bank Deposit  associated with this record.</description>
        <inlineHelpText>The Bank Deposit  associated with this record.</inlineHelpText>
        <label>Bank Deposit</label>
        <referenceTo>AcctSeed__Bank_Deposit__c</referenceTo>
        <relationshipLabel>Uncleared Bank Reconciliation Lines</relationshipLabel>
        <relationshipName>Uncleared_Bank_Reconciliation_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Reconciliation__c</fullName>
        <description>Records the associated Bank Reconciliation.</description>
        <inlineHelpText>Records the associated Bank Reconciliation.</inlineHelpText>
        <label>Bank Reconciliation</label>
        <referenceTo>AcctSeed__Bank_Reconciliation2__c</referenceTo>
        <relationshipLabel>Uncleared Bank Reconciliation Lines</relationshipLabel>
        <relationshipName>Uncleared_Bank_Reconciliation_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cash_Disbursement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Cash Disbursement associated with this record.</description>
        <inlineHelpText>The Cash Disbursement associated with this record.</inlineHelpText>
        <label>Cash Disbursement</label>
        <referenceTo>AcctSeed__Cash_Disbursement__c</referenceTo>
        <relationshipLabel>Uncleared Bank Reconciliation Lines</relationshipLabel>
        <relationshipName>Uncleared_Bank_Reconciliation_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cash_Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Cash Receipt  associated with this record.</description>
        <inlineHelpText>The Cash Receipt  associated with this record.</inlineHelpText>
        <label>Cash Receipt</label>
        <referenceTo>AcctSeed__Cash_Receipt__c</referenceTo>
        <relationshipLabel>Uncleared Bank Reconciliation Lines</relationshipLabel>
        <relationshipName>Uncleared_Bank_Reconciliation_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cleared_Date__c</fullName>
        <label>Cleared Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Journal_Entry_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Journal Entry Line  associated with this record.</description>
        <inlineHelpText>The Journal Entry Line  associated with this record.</inlineHelpText>
        <label>Journal Entry Line</label>
        <referenceTo>AcctSeed__Journal_Entry_Line__c</referenceTo>
        <relationshipLabel>Uncleared Bank Reconciliation Lines</relationshipLabel>
        <relationshipName>Uncleared_Bank_Reconciliation_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger_Amount__c</fullName>
        <label>Ledger Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payee_Id__c</fullName>
        <label>Payee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payee_Name__c</fullName>
        <label>Payee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Related_Source_Document__c</fullName>
        <description>Records the associated source document the Uncleared Bank Reconciliation Line captures.</description>
        <inlineHelpText>The name of the source document associated with this Uncleared Bank Reconciliation Line. This is a system populated field.</inlineHelpText>
        <label>Related Source Document</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Uncleared Bank Reconciliation Line</label>
    <nameField>
        <displayFormat>UBRL-{00000}</displayFormat>
        <label>Uncleared Bank Reconciliation Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Uncleared Bank Reconciliation Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>